@@ -8,7 +8,6 @@
 #ifndef HASHTABLE_HH
 #define HASHTABLE_HH
 
-#include "read_parsers.hh"
 
 #include <vector>
 #include <iostream>
@@ -23,6 +22,7 @@
 
 #include "khmer.hh"
 #include "khmer_exception.hh"
+#include "read_parsers.hh"
 #include "subset.hh"
 #include "kmer_hash.hh"
 
@@ -175,7 +175,7 @@ protected:
     unsigned int    _nbits_sub_1;
 
     Hashtable( WordLength ksize )
-	    : _max_count( MAX_COUNT ),
+	    : _max_count( MAX_KCOUNT ),
 	    _max_bigcount( MAX_BIGCOUNT ),
             _ksize( ksize )
     {
